--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".FileActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -19,8 +19,8 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".FileActivity"
-                android:label="@string/title_activity_file">
+                android:name=".MainActivity"
+                android:label="MainActivity">
         </activity>
     </application>
 
