--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".SplashActivity"
-        android:theme="@style/SplashTheme">
+        <activity android:name=".TestActivity">
+        </activity>
+        <activity
+                android:name=".SplashActivity"
+                android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -32,6 +35,11 @@
                 android:name=".LoginActivity"
                 android:label="LOGIN">
         </activity>
+
+        <service
+                android:name=".DownloadService"
+                android:enabled="true">
+        </service>
     </application>
 
 </manifest>
