--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
 
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
+            android:icon="@drawable/daljin_logo_vertical"
+            android:label="달진나스"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
@@ -26,7 +26,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".FileActivity">
+        <activity android:name=".FileActivity"
+        android:label="">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -34,8 +35,7 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".LoginActivity"
-                android:label="LOGIN">
+                android:name=".LoginActivity">
         </activity>
 
         <service
