--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,21 +13,13 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".SingupActivity">
+        </activity>
         <activity android:name=".UploadActivity">
         </activity>
         <activity android:name=".TestActivity">
         </activity>
-        <activity
-                android:name=".SplashActivity"
-                android:theme="@style/SplashTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-        <activity android:name=".FileActivity"
-        android:label="">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -35,7 +27,15 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".LoginActivity">
+                android:name=".FileActivity"
+                android:label="">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".LoginActivity">
         </activity>
 
         <service
