VER 1.1.0 다운로드/업로드 큐기반 실행(연속적 작업추가 가능) 팬딩인텐트 액티비티 재생성 불가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             </intent-filter>
         </activity>
         <activity
+                android:launchMode="singleTop"
                 android:name=".FileActivity"
                 android:label="">
         </activity>
