--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
+
+
+
+    implementation files('libs/naveridlogin_android_sdk_4.2.5.aar')
+    implementation 'com.android.support:customtabs:28.0.0'
 }
